# defguard

./: .dockerignore  .editorconfig  .env  .env-template  .env.example  .fpm  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .trivyignore.yaml  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.ci  Dockerfile.device  Dockerfile.ldap  LICENSE  LICENSE.md  Openid.md  README.md  SECURITY.md  \  build.rs  crates.js  defguard-core.service  defguard.service  defguard.service.freebsd  deny.toml  docker-compose.e2e-auto-adoption.yaml  docker-compose.e2e.yaml  docker-compose.ldap.yaml  docker-compose.yaml  drop_test_dbs.sh  example-config.toml  flake.nix  help.html  justfile  search-index.js  (+5 more)
crates/defguard/: Cargo.toml
crates/defguard/src/: main.rs
crates/defguard_certs/: Cargo.toml
crates/defguard_certs/src/: lib.rs  main.rs
crates/defguard_common/: Cargo.toml  build.rs
crates/defguard_common/src/: config.rs  csv.rs  globals.rs  hex.rs  lib.rs  random.rs  utils.rs
crates/defguard_core/: Cargo.toml  build.rs  user_agent_header_regexes.yaml
crates/defguard_core/migrations/: 20221012084225_inet.down.sql  20221017101958_openid.up.sql  20221111084416_mfa_enabled.down.sql  20221115095301_oauth.down.sql  20221115095301_oauth.up.sql  20221205152009_extend_oauth2token.down.sql  20230728091355_enrollment.down.sql  20231114112643_email_mfa.down.sql  20240124063948_adjust_peer_disconnect.down.sql  20240214090709_add_mfa_authorization_timestamp.down.sql  20240216195802_authentication_key.up.sql  20240809083720_add_licenses.up.sql  20241119105926_disable_wallet_mfa.down.sql  20241211115639_directory_sync_target.down.sql  20250107125423_network_devices_fixes_and_cleanup.up.sql  20250206111732_add_api_tokens.up.sql  20250213094023_acl.down.sql  20250304071532_acl_location.up.sql  20250320104446_acl_allow_conflicting_sources.down.sql  20250407115800_add_acl_rule_expired_state.up.sql  20250425071954_add_acl_alias_kind.up.sql  20250509095404_fix_wireguard_network_stats_view.down.sql  20250515170938_add_audit_event_log.down.sql  20250515170938_add_audit_event_log.up.sql  20250526072652_audit_stream.up.sql  20250612111316_token_auth_completed.down.sql  20250612111316_token_auth_completed.up.sql
crates/defguard_core/proto/: .gitignore  LICENSE.md  README.md  flake.nix
crates/defguard_core/src/: adoption_logs.rs  appstate.rs  assets.rs  cert_settings.rs  config.rs  enrollment_management.rs  error.rs  events.rs  headers.rs  letsencrypt.rs  lib.rs  location_management.rs  mail.rs  openapi.rs  random.rs  secret.rs  setup.rs  setup_logs.rs  support.rs  templates.rs  updates.rs  user_management.rs  utility_thread.rs  version.rs  wg_config.rs  wireguard_peer_disconnect.rs  wireguard_stats_purge.rs
crates/defguard_core/templates/: base_plain.tera  macros.tera  mail_desktop_start.tera  mail_email_mfa_activation.tera  mail_password_reset_success.tera
crates/defguard_event_logger/: Cargo.toml
crates/defguard_event_logger/src/: description.rs  error.rs  lib.rs  message.rs
crates/defguard_event_router/: Cargo.toml
crates/defguard_event_router/src/: error.rs  events.rs  lib.rs
crates/defguard_gateway_manager/: Cargo.toml
crates/defguard_gateway_manager/src/: auth.rs  certs.rs  error.rs  handler.rs  lib.rs  tests.rs
crates/defguard_gateway_manager/tests/: mod.rs
crates/defguard_grpc_tls/: Cargo.toml
crates/defguard_grpc_tls/src/: certs.rs  connector.rs  lib.rs  server.rs
crates/defguard_mail/: Cargo.toml
crates/defguard_mail/src/: lib.rs  mail.rs  mail_context.rs  mail_handler.rs  qr.rs  templates.rs  tests.rs
crates/defguard_mail/templates/: base.mjml  base.tera  certificate-expiration.mjml  certificate-expiration.text  desktop-start.mjml  desktop-start.text  enrollment-admin-notification.mjml  enrollment-admin-notification.text  enrollment-welcome.mjml  enrollment-welcome.text  gateway-disconnected.mjml  gateway-disconnected.text  gateway-reconnected.mjml  letsencrypt-cert-refresh-failed.mjml  letsencrypt-cert-refresh-failed.text  macros.mjml  macros.tera  mail_desktop_start.tera  mail_email_mfa_activation.tera  mail_email_mfa_code.tera  mail_enrollment_admin_notification.tera  mail_enrollment_start.tera  mail_enrollment_welcome.tera  mail_gateway_disconnected.tera  mail_gateway_reconnected.tera  mail_mfa_configured.tera  mail_new_device_added.tera  mail_new_device_login.tera  mail_new_device_ocid_login.tera  mail_password_reset_start.tera  mail_password_reset_success.tera  mail_support_data.tera  mail_test.mjml  mail_test.tera  mfa-activation.mjml  mfa-activation.text  mfa-code.mjml  mfa-code.text  mfa-configured.mjml  mfa-configured.text  (+17 more)
crates/defguard_proto/: Cargo.toml  build.rs
crates/defguard_proto/src/: lib.rs
crates/defguard_protos/: Cargo.toml  build.rs
crates/defguard_protos/src/: lib.rs
crates/defguard_proxy_manager/: Cargo.toml
crates/defguard_proxy_manager/src/: certs.rs  enrollment.rs  error.rs  handler.rs  lib.rs  password_reset.rs  proxy_handler.rs
crates/defguard_session_manager/: Cargo.toml
crates/defguard_session_manager/src/: error.rs  events.rs  lib.rs  session_state.rs
crates/defguard_session_manager/tests/: mod.rs
crates/defguard_setup/: Cargo.toml
crates/defguard_setup/src/: auto_adoption.rs  handlers.rs  lib.rs  migration.rs  setup.rs  setup_server.rs
crates/defguard_setup/tests/: auto_adoption_wizard.rs  auto_wizard_url_settings.rs  initial_setup.rs  migration_wizard.rs  session_info.rs  wizard_init.rs  wizard_state.rs
crates/defguard_static_ip/: Cargo.toml
crates/defguard_static_ip/src/: error.rs  lib.rs
crates/defguard_version/: Cargo.toml
crates/defguard_version/src/: client.rs  lib.rs  middleware.rs  server.rs  tracing.rs
crates/defguard_vpn_stats_purge/: Cargo.toml
crates/defguard_vpn_stats_purge/src/: lib.rs
crates/defguard_web_ui/: Cargo.toml  build.rs
crates/defguard_web_ui/src/: assets.rs  lib.rs
enterprise/crates/defguard_enterprise_activity_log_stream/: Cargo.toml
enterprise/crates/defguard_enterprise_db/: Cargo.toml
tools/defguard_generator/: Cargo.toml  README.md
(+5937 files in other folders)
