[workspace.package]
edition = "2024"
license-file = "LICENSE.md"
homepage = "https://defguard.net/"
repository = "https://github.com/DefGuard/defguard"
rust-version = "1.85.1"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# internal crates
defguard_core = { path = "./crates/defguard_core", version = "1.3.1" }
defguard_event_logger = { path = "./crates/defguard_event_logger", version = "0.0.0" }
defguard_event_router = { path = "./crates/defguard_event_router", version = "0.0.0" }
defguard_web_ui = { path = "./crates/defguard_web_ui", version = "0.0.0" }
model_derive = { path = "./crates/model_derive", version = "0.0.0" }

# external dependencies
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
axum = "0.8"
axum-client-ip = "0.7"
axum-extra = { version = "0.10", features = [
    "cookie-private",
    "typed-header",
    "query",
] }
base32 = "0.5"
base64 = "0.22"
bytes = { version = "1.6", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
humantime = "2.1"
# match version used by sqlx
ipnetwork = "0.20"
jsonwebkey = { version = "0.3.5", features = ["pkcs-convert"] }
jsonwebtoken = "9.3"
ldap3 = { version = "0.11", default-features = false, features = ["tls"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
md4 = "0.10"
parse_link_header = "0.4"
paste = "1.0.15"
pgp = "0.15"
prost = "0.13"
pulldown-cmark = "0.13"
# match version used by sqlx
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", features = ["json"] }
rsa = "0.9"
rust-ini = "0.21"
secrecy = { version = "0.10", features = ["serde"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
# match version from webauthn-rs-core
serde_cbor = { version = "0.12.0-dev", package = "serde_cbor_2" }
serde_json = "1.0"
serde_urlencoded = "0.7"
sha-1 = "0.10"
sha256 = "1.5"
sqlx = { version = "0.8", features = [
    "chrono",
    "ipnetwork",
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
] }
ssh-key = "0.6"
struct-patch = "0.8"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
tera = "1.20"
thiserror = "2.0"
# match axum-extra -> cookies
time = { version = "0.3", default-features = false }
tokio = { version = "1", features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = { version = "0.12", features = ["gzip", "tls-native-roots"] }
tonic-health = "0.12"
totp-lite = { version = "2.0" }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trait-variant = "0.1"
uaparser = "0.6"
# openapi
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
uuid = { version = "1.9", features = ["v4"] }
webauthn-authenticator-rs = { version = "0.5" }
webauthn-rs = { version = "0.5", features = [
    "danger-allow-state-serialisation",
] }
webauthn-rs-proto = "0.5"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# https://github.com/juhaku/utoipa/issues/1345
[workspace.dependencies.zip]
version = "=2.4.2"

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"
strip = "symbols"
