[package]
name = "defguard"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# internal crates
defguard_common = { workspace = true }
defguard_core = { workspace = true }
defguard_event_router = { workspace = true }
defguard_event_logger = { workspace = true }
defguard_proxy_manager = { workspace = true }
defguard_session_manager = { workspace = true }
defguard_version = { workspace = true }
defguard_vpn_stats_purge = { workspace = true }
defguard_setup = { workspace = true }

# external dependencies
anyhow = { workspace = true }
bytes = { workspace = true }
dotenvy = "0.15"
secrecy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
