[package]
name = "defguard_certs"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
rcgen.workspace = true
sqlx.workspace = true
thiserror.workspace = true
rustls-pki-types.workspace = true
chrono.workspace = true
time = "0.3"
x509-parser = "0.18"
