[package]
name = "defguard_certs"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
rcgen.workspace = true
rustls-pki-types.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
x509-parser.workspace = true
