[package]
name = "defguard_common"
version = "2.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
model_derive.workspace = true

anyhow.workspace = true
argon2.workspace = true
base32.workspace = true
base64.workspace = true
chrono.workspace = true
claims.workspace = true
clap.workspace = true
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
humantime.workspace = true
ipnetwork.workspace = true
jsonwebtoken.workspace = true
openidconnect.workspace = true
rand.workspace = true
reqwest.workspace = true
rsa.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_cbor.workspace = true
sqlx.workspace = true
struct-patch.workspace = true
thiserror.workspace = true
tonic.workspace = true
totp-lite.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true
webauthn-rs.workspace = true
x25519-dalek.workspace = true
url = "2.5"

[dev-dependencies]
matches.workspace = true

[build-dependencies]
vergen-git2 = { version = "9.1", features = ["build"] }
