[package]
name = "defguard_core"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# internal crates
defguard_common = { workspace = true }
defguard_mail = { workspace = true }
defguard_proto = { workspace = true }
defguard_web_ui = { workspace = true }
defguard_version = { workspace = true }
model_derive = { workspace = true }

# external dependencies
anyhow = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
axum-client-ip = { workspace = true }
axum-extra = { workspace = true }
base32 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
# match version used by sqlx
ipnetwork = { workspace = true }
jsonwebkey = { workspace = true }
jsonwebtoken = { workspace = true }
ldap3 = { workspace = true }
lettre = { workspace = true }
md4 = { workspace = true }
openidconnect.workspace = true
parse_link_header = { workspace = true }
paste = { workspace = true }
pgp = { workspace = true }
prost.workspace = true
# match version used by sqlx
rand = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
rust-ini = { workspace = true }
secrecy = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
# match version from webauthn-rs-core
serde_cbor = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sha-1 = { workspace = true }
sha256 = { workspace = true }
sqlx = { workspace = true }
ssh-key = { workspace = true }
struct-patch = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
# match axum-extra -> cookies
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-prost.workspace = true
totp-lite = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
trait-variant = { workspace = true }
uaparser = { workspace = true }
# openapi
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
webauthn-authenticator-rs = { workspace = true }
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }
x25519-dalek = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
bytes = { workspace = true }
tower = "0.5"
regex = "1.10"
ammonia = "4.1.1"

[dev-dependencies]
bytes = "1.6"
claims.workspace = true
hyper-util = "0.1"
matches.workspace = true
regex = "1.10"
reqwest = { version = "0.12", features = [
    "cookies",
    "json",
    "multipart",
    "rustls-tls",
    "stream",
], default-features = false }
serde_qs = "1.0"
tower = "0.5"
webauthn-authenticator-rs = { version = "0.5", features = ["softpasskey"] }

[build-dependencies]
tonic-prost-build.workspace = true
