[package]
name = "defguard_event_router"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# internal crates
defguard_core = { workspace = true }
defguard_event_logger = { workspace = true }
defguard_session_manager = { workspace = true }

# external dependencies
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
