[package]
name = "defguard_gateway_manager"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
defguard_certs.workspace = true
defguard_common.workspace = true
defguard_core.workspace = true
defguard_grpc_tls.workspace = true
defguard_proto.workspace = true
defguard_version.workspace = true

anyhow.workspace = true
chrono.workspace = true
hyper-rustls.workspace = true
reqwest.workspace = true
semver.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
hyper-util = "0.1"
