[package]
name = "defguard_grpc_tls"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
defguard_common.workspace = true
http = "1.1"
rustls = { version = "0.23", features = ["ring"] }
thiserror.workspace = true
tokio.workspace = true
tower-service = "0.3"
x509-parser = "0.18"
tracing.workspace = true
