[package]
name = "defguard_mail"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
defguard_common.workspace = true

chrono.workspace = true
lettre.workspace = true
pulldown-cmark.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tera.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
humantime.workspace = true

mrml = "5.1"

[dev-dependencies]
claims.workspace = true
