[package]
name = "defguard_protos"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
prost = {workspace = true}
tonic = { version = "0.12", features = ["gzip", "tls-native-roots"] }

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"
