[package]
name = "defguard_setup"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
defguard_common.workspace = true
anyhow.workspace = true
axum.workspace = true
defguard_web_ui.workspace = true
semver.workspace = true
sqlx.workspace = true
tokio.workspace = true
defguard_core.workspace = true
defguard_certs.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tracing.workspace = true
serde.workspace = true
chrono.workspace = true
defguard_version.workspace = true
