[package]
name = "defguard_version"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
os_info = "3.12"
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
tonic.workspace = true
tower = "0.5"
tracing.workspace = true
tracing-subscriber.workspace = true
