[package]
name = "defguard_version"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
os_info.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
