[package]
name = "defguard_vpn_stats_purge"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
humantime.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true

