[package]
name = "defguard_web_ui"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
mime_guess = "2.0"
rust-embed = { version = "8.5", features = ["include-exclude"] }
