[package]
name = "defguard_generator"
version = "0.0.0"
edition = "2024"
license-file = "../../LICENSE.md"
homepage = "https://defguard.net/"
repository = "https://github.com/DefGuard/defguard"
rust-version = "1.87.0"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
defguard_common = { workspace = true }
defguard_core = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
